--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
+    "fs-extra": "^11.2.0",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
